--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,33 @@ img{
     .s1-head{
         margin-top:1em;
     }
+    
 }
 .s3cls{
-    wdith:80vh;
+    
     height:80vh;
 }
+.s4-head{
+    color: white;
+    font-family: cursive;
+    font-weight: bold;
+
+}
+.icon-img{
+    width:50px;
+    height:50px;
+    background: orange;
+    border-radius: 60px;
+}
+h6{
+    color:white;
+    font-family: cursive;
+}
+@media(max-width:281px){
+    .s4{
+        padding-top: 8em;
+    }
+    
+    
+}
+
